<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ornament"
    tools:context=".secondActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="45dp"
        android:textColor="@color/roze"
        android:layout_marginRight="50dp"
        android:text="@string/id_labelaJelo"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_palacinka"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/id_palacinka"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cb_krofna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/id_krofna"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:textColor="@color/roze"
        android:text="@string/id_labelaPIce"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_sok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/id_sok"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cb_caj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/id_caj"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="265dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="50dp"
        android:textColor="@color/roze"
        android:text="@string/id_labelaKomentar"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText_koment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="215dp"
        android:ems="10"
        android:hint="@string/id_hint"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="165dp"
        android:textSize="25sp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="50dp"
        android:textColor="@color/roze"
        android:text="@string/id_nacin" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="110dp">

        <RadioButton
            android:id="@+id/id_rbRest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/isp_rest"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/id_rbPoneti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/isp_poneti"
            android:checked="true"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="178dp"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:background="@drawable/texture"
        android:textColor="@color/roze"
        android:text="@string/app_button"
        android:textSize="30sp" />

</RelativeLayout>